--- a/src/Component/PostDetail/PostDetail.css
+++ b/src/Component/PostDetail/PostDetail.css
@@ -14,13 +14,14 @@
     font-size: 20px;
     cursor: pointer;
     margin: 20px;
-    border-radius:30px
+    border-radius:30px;
 }
 
 .hide , .view {
    overflow: hidden;
     border-radius: 30px;
     padding: 10px 20px;
+    transition: all .3s;
 }
 .hide {
     color: white;
